--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,54 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
-a {
-  color: inherit;
-  text-decoration: none;
+::-webkit-scrollbar {
+    display: none;
 }
 
 * {
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    outline: none;
+}
+
+.body {
+    background: #0D1117;
+}
+
+.home {
+    background: #010409;
+}
+
+.header {
+    background: #161B22;
+}
+
+.search {
+    border: 1px solid #30363d;
+}
+
+.textHover {
+    color: #8B949E;
+}
+
+.textStarred {
+    color: #E3B341;
+}
+
+.button {
+    background: #238636;
+}
+
+.borderApp {
+    border-color: #30363d;
+}
+
+.starBtn {
+    background: #21262D;
+}
+
+.link {
+    color: #58A6FF;
 }
